# abchat

./: .env.example  .gitignore  AGENTS.md  README.md  TODO.md  docker-compose.yml
.github/workflows/: docker-publish.yml
backend/: .env.example  Cargo.toml  Dockerfile
backend.bak/: Cargo.toml
backend.bak/crates/dbridge-api/: Cargo.toml
backend.bak/crates/dbridge-api/src/: lib.rs  password.rs
backend.bak/crates/dbridge-auth/: Cargo.toml
backend.bak/crates/dbridge-auth/src/: main.rs
backend.bak/crates/dbridge-core/: Cargo.toml
backend.bak/crates/dbridge-core/src/: lib.rs
backend.bak/crates/dbridge-engine/: Cargo.toml
backend.bak/crates/dbridge-engine/src/: lib.rs
backend.bak/crates/dbridge-error/: Cargo.toml
backend.bak/crates/dbridge-error/src/: lib.rs
backend.bak/crates/dbridge-persistence/: Cargo.toml
backend.bak/crates/dbridge-persistence-impl/: Cargo.toml
backend.bak/crates/dbridge-persistence-impl/src/: lib.rs
backend.bak/crates/dbridge-persistence/src/: lib.rs
backend.bak/crates/dbridge-provider-sdk/: Cargo.toml
backend.bak/crates/dbridge-provider-sdk/src/: lib.rs
backend.bak/providers/discord/: Cargo.toml
backend.bak/providers/discord/src/: lib.rs
backend.bak/providers/web/: Cargo.toml
backend.bak/providers/web/src/: lib.rs
backend.bak/src/: config.rs  main.rs
backend/src/: config.rs  error.rs  lib.rs  main.rs  onboard.rs  state.rs  util.rs
backend/src/api/: mod.rs  router.rs
backend/src/api/routes/: admin.rs  auth.rs  channels.rs  mod.rs  notifications.rs  ws.rs
backend/src/api/routes/ws/: handler.rs  handshake.rs  mod.rs  session.rs
backend/src/auth/: error.rs  extract.rs  hash.rs  jwt.rs  mod.rs
backend/src/chat/: broker.rs  manager.rs  mod.rs  session.rs
backend/src/service/: mod.rs  notifications.rs  persistence.rs  pubsub.rs
backend/src/service/persistence/: in_memory.rs  postgres.rs
backend/src/service/pubsub/: in_memory.rs  redis.rs
backend/src/types/: dto.rs  mod.rs  model.rs  state.rs  ws.rs
bot/: .env.example  Dockerfile  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.json
bot/src/: index.ts
bot/src/lib/: logger.ts  preprocess.ts  redis.ts  types.ts
deploy/: nginx.conf
docs/: API.md  DEPLOYMENT.md
frontend/: .env.example  Dockerfile  entrypoint.sh  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
frontend/public/: site.webmanifest
frontend/scripts/: write-env.js
frontend/src/: App.tsx  env.ts  index.css  main.tsx  sw.ts  vite-env.d.ts
frontend/src/api/: dbridge-api.ts  notifications.ts
frontend/src/components/admin/: UserTable.tsx
frontend/src/components/chat/: MessageRow.tsx
frontend/src/components/chat/settings/: MiscSettingsCard.tsx  NicknameChangeCard.tsx  NotificationSettingsCard.tsx  PasswordChangeCard.tsx  SettingsCard.tsx  SettingsOverlay.tsx
frontend/src/components/ui/: Button.tsx  Input.tsx
frontend/src/i18n/: config.ts
frontend/src/i18n/locales/: en.json  ko.json
frontend/src/pages/: AdminPage.tsx  ChatPage.tsx  LoginPage.tsx
frontend/src/util/: password.ts
scripts/backend-dev/: docker-compose.yml
signer/: Cargo.toml
signer/src/: main.rs
