[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
axum = { version = "0.8.8", features = ["macros", "ws"] }
dashmap = "6.1.0"
futures-util = "0.3.32"
jsonwebtoken = "10.3.0"
pubsub-rs = "0.1.1"
redis = { version = "1.0.5", features = ["tokio-comp"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["full"] }
tracing = "0.1.44"
utoipa = "5.4.0"
utoipa-axum = "0.2.0"
uuid = { version = "1.22.0", features = ["v4"] }
