[package]
name = "dbridge-api"
version = "0.1.0"
edition = "2024"

[dependencies]
dbridge-core = { path = "../dbridge-core" }
dbridge-error = { path = "../dbridge-error", features = ["axum"] }
dbridge-persistence = { path = "../dbridge-persistence" }
axum = "0.8.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "9.3.1"
chrono = { version = "0.4.39", features = ["serde"] }
tower-http = { version = "0.6.8", features = ["cors"] }
tracing = "0.1.44"
uuid = { version = "1.22.0", features = ["v4"] }
async-trait = "0.1.86"
tokio = { version = "1.50.0", features = ["full"] }
argon2 = "0.5.3"
