[package]
name = "dbridge-auth"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.44"
clap = { version = "4.5.60", features = ["derive"] }
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
serde = { version = "1.0.228", features = ["derive"] }
persistence = { package = "persistence-impl", path = "../dbridge-persistence-impl" }
dbridge-persistence = { path = "../dbridge-persistence" }
