[package]
name = "dbridge-core"
version = "0.1.0"
edition = "2024"

[dependencies]
dbridge-error = { path = "../dbridge-error" }
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1.86"
uuid = { version = "1.22.0", features = ["v4"] }
tokio = { version = "1.50.0", features = ["sync"] }
