[package]
name = "dbridge-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
dbridge-core = { path = "../dbridge-core" }
dbridge-error = { path = "../dbridge-error" }
persistence = { package = "persistence-impl", path = "../dbridge-persistence-impl" }
futures-util = "0.3.32"
tokio = { version = "1.50.0", features = ["full"] }
tracing = "0.1.44"
uuid = { version = "1.22.0", features = ["v4"] }
