[package]
name = "dbridge-error"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2.0.12"
axum = { version = "0.8.1", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

[features]
default = []
axum = ["dep:axum", "dep:serde", "dep:serde_json"]
