[package]
name = "dbridge-provider-sdk"
version = "0.1.0"
edition = "2024"

[dependencies]
dbridge-core = { path = "../dbridge-core" }
dbridge-error = { path = "../dbridge-error" }
async-trait = "0.1.86"
tokio = { version = "1.50.0", features = ["sync"] }
tracing = "0.1.44"
uuid = { version = "1.22.0", features = ["v4"] }
