[package]
name = "provider-discord"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
dbridge-core = { path = "../../crates/dbridge-core" }
dbridge-error = { path = "../../crates/dbridge-error" }
dbridge-provider-sdk = { path = "../../crates/dbridge-provider-sdk" }
serde = { version = "1.0.228", features = ["derive"] }
serenity = { version = "0.12.5", features = ["rustls_backend"] }
tokio = { version = "1.50.0", features = ["full"] }
tracing = "0.1.44"
