[package]
name = "provider-web"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
axum = { version = "0.8.8", features = ["ws", "macros"] }
chrono = "0.4.44"
dbridge-core = { path = "../../crates/dbridge-core" }
dbridge-persistence = { path = "../../crates/dbridge-persistence" }
dbridge-error = { path = "../../crates/dbridge-error", features = ["axum"] }
dbridge-provider-sdk = { path = "../../crates/dbridge-provider-sdk" }
dbridge-api = { path = "../../crates/dbridge-api" }
persistence = { package = "persistence-impl", path = "../../crates/dbridge-persistence-impl" }
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["full"] }
tracing = "0.1.44"
uuid = { version = "1.22.0", features = ["v4"] }
